Change meta tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,12 +6,16 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Create and handle your own tournaments with the Swiss tournament format" />
+  <meta property="og:description" content="Create and handle your own tournaments with the Swiss tournament format" />
+  <meta property="og:title" content="Swiss tournaments">
+  <meta property="og:image" content="https://app.swisstournaments.com/logo512.png">
+  <meta property="og:url" content="https://app.swisstournaments.com">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Swiss tournament</title>
+  <title>Swiss tournaments</title>
 </head>
 
 <body>
